<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent">

<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/rvCartList"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:layout_marginStart="0dp"
    android:layout_marginLeft="0dp"
    android:layout_marginTop="60dp" />

<TextView
    android:id="@+id/textView"
    android:layout_width="100dp"
    android:layout_height="59dp"
    android:gravity="bottom|center"
    android:text="@string/cart_ids"
    android:textSize="24sp" />

<TextView
    android:id="@+id/textView5"
    android:layout_width="136dp"
    android:layout_height="59dp"
    android:layout_toRightOf="@id/textView"
    android:gravity="bottom|center"
    android:text="@string/current_status"
    android:textSize="24sp"
    android:layout_toEndOf="@id/textView" />

<TextView
    android:id="@+id/textView6"
    android:layout_width="149dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="2dp"
    android:layout_marginLeft="2dp"
    android:layout_toEndOf="@+id/textView5"
    android:layout_toRightOf="@+id/textView5"
    android:gravity="bottom|center"
    android:text="@string/update_status"
    android:textSize="24sp" />
</RelativeLayout>